# pygame-snake-game

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml
tests/: test_main.py
